--- a/quartz/components/styles/linksHeader.scss
+++ b/quartz/components/styles/linksHeader.scss
@@ -18,13 +18,14 @@ header {
   }
 
   img {
-    height: 1em;
+    height: 2em;
     margin: 0 0.3em 0 0;
-    vertical-align: sub;
+    vertical-align: text-bottom;
   }
 
   a {
     color: var(--dark);
+    font-family: var(--headerFont);
   }
 }
 
