Quartz sync: Feb 21, 2024, 10:37 PM

--- a/quartz/components/styles/darkmode.scss
+++ b/quartz/components/styles/darkmode.scss
@@ -1,3 +1,9 @@
+@media screen and (max-width: 1500px) {
+  #HeaderDM{
+    display: none;
+  }
+}
+
 .darkmode {
   position: relative;
   width: 20px;
@@ -47,3 +53,4 @@
     opacity: 0;
   }
 }
+
