Quartz sync: Jul 28, 2024, 10:14 PM

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -3,6 +3,13 @@
 // put your custom CSS here!
 
 .rtl-class,
-.rtl-class *:not(.math) {
+.rtl-class * {
   direction: rtl;
+}
+
+.rtl-class {
+  .math,
+  .code {
+    direction: ltr;
+  }
 }
