Quartz sync: Jul 28, 2024, 10:20 PM

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -9,7 +9,10 @@
 
 .rtl-class {
   .math,
-  .code {
-    direction: ltr;
+  .code,
+  .math *,
+  .code * {
+    direction: ltr !important;
+    text-align: left !important;
   }
 }
