Quartz sync: Jul 28, 2024, 10:46 PM

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -8,11 +8,11 @@
 }
 
 .rtl-class {
+  .katex,
   .math,
-  .code,
-  .math *,
-  .code * {
-    direction: ltr !important;
-    text-align: left !important;
+  pre,
+  code {
+    direction: ltr;
+    unicode-bidi: isolate;
   }
 }
