Quartz sync: Jul 28, 2024, 10:54 PM

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -2,17 +2,10 @@
 
 // put your custom CSS here!
 
-.rtl-class,
-.rtl-class * {
-  direction: rtl;
-}
-
 .rtl-class {
-  .katex,
-  .math,
-  pre,
-  code {
-    direction: ltr;
-    unicode-bidi: isolate;
+  direction: rtl;
+
+  & > *:not(.katex):not(.math):not(pre):not(code) {
+    direction: rtl;
   }
 }
