Quartz sync: Jul 28, 2024, 11:13 PM

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -2,10 +2,21 @@
 
 // put your custom CSS here!
 
-.rtl-class {
+.rtl-class,
+.rtl-class * {
   direction: rtl;
+}
 
-  & > *:not(.katex):not(.math):not(pre):not(code) {
-    direction: rtl;
+.rtl-class {
+  .katex,
+  .katex *,
+  .math,
+  .math *,
+  pre,
+  pre *,
+  code,
+  code * {
+    direction: ltr;
+    unicode-bidi: isolate;
   }
 }
