Quartz sync: Oct 17, 2024, 11:24 PM

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -20,3 +20,10 @@
     unicode-bidi: isolate;
   }
 }
+
+.space {
+    background: url('/background.gif') gray;
+    background-repeat: repeat;
+    overflow-x: hidden;
+    cursor: url('/cursor.png'), auto;
+}
